--- a/src/assets/css/CartAndPay.css
+++ b/src/assets/css/CartAndPay.css
@@ -1,9 +1,16 @@
 .dropdown-cart-menu {
     background-color: #EFEBE6;
     opacity: 0.85 !important;
-    width: 450px !important;
+    width: 300px !important;
     min-height: 10px !important;
-    transform: translate3d(-351px, 31px, 0px) !important;
+    transform: translate3d(-200px, 31px, 0px) !important;
+}
+
+.cart-item {
+    width: 175px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .dropdown-cart-item:active {
@@ -44,39 +51,39 @@
 
 
 /*-----media max-width: 991.98-----*/
-@media (max-width: 991.98px) {
+/* @media (max-width: 991.98px) {
 .red-dots {
     top: -8px;
     left: -8px;
 }
-}
+} */
 
 
 /*-----media max-width: 767.98-----*/
-@media (max-width: 767.98px) {
+/* @media (max-width: 767.98px) {
 .dropdown-cart-menu {
     transform: translate3d(-301px, 31px, 0px) !important;
 }
-}
+} */
 
 
 /*-----media max-width: 575.98-----*/
-@media (max-width: 575.98px) {
+/* @media (max-width: 575.98px) {
 .dropdown-cart-menu {
     transform: translate3d(-291px, 31px, 0px) !important;
 }
 .fix-btn-sm{
     height: 31px;
 }
-}
+} */
 
 
 /*-----media max-width: 499.98-----*/
-@media (max-width: 499.98px) {
+/* @media (max-width: 499.98px) {
 .dropdown-cart-menu {
     width: 300px !important;
 }
 .co-pm {
     padding: 0;
 }
-}
+} */
