--- a/src/assets/css/ProductCategory.css
+++ b/src/assets/css/ProductCategory.css
@@ -1,7 +1,7 @@
 .sidebar-sticky {
     padding: 0;
     height: 100%;
-    top: 100px;
+    top: 60px;
     transition: all .5s ease-in-out;
 }
 .nav-link {
@@ -14,18 +14,73 @@
 
 }
 
+.product-tab {
+    display: flex;
+    justify-content: center;
+    height: 55px;
+    background-color: #ffffff;
+}
+
+.product-tab div:first-child {
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+.product-tab div:last-child {
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+
+.product-tab-item {
+    width: 20%;
+    text-align: center;
+    height: 25px;
+    background-color: #ffffff;
+    line-height: 25px;
+    margin: 15px 0;
+    box-sizing: border-box;
+    /* border: 1px solid #FAD0D0; */
+    border: 1px solid rgba(239, 235, 230, .85);
+}
+
+.selected {
+    /* background-color: #FAD0D0;
+    color: #ffffff; */
+    background-color: rgba(239, 235, 230, .85);
+    color: #ffffff;
+}
+
+.product-tab-link {
+    /* color: #FAD0D0; */
+    color: rgba(239, 235, 230, .85);
+}
+
+.link-selected {
+    color: #999999;
+    text-decoration-line: none;
+}
+
 .seriesStyle a {
     text-decoration: none;
     color: #6c757d;
     transition: all .3s ease-in-out;
 }
 
-.seriesStyle a:hover {
+/* .seriesStyle a:hover {
     color: #FAD0D0;
+} */
+
+.product-item-title {
+    /* white-space: nowrap; */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .image-rwd {
-    height: 246px;
+    height: 200px;
     background-size: cover;
     background-position: center;
 }
@@ -43,17 +98,17 @@
     100% {top: 0px;}
 }
 
-@media (max-width: 1199.98px) {.image-rwd {height: 200px;}}
-@media (max-width: 991.98px) {.image-rwd {height: 320px;}}
+/* @media (max-width: 1199.98px) {.image-rwd {height: 200px;}}
+@media (max-width: 991.98px) {.image-rwd {height: 320px;}} */
 @media (max-width: 767.98px) {
 .sidebar-sticky {
-    top: 70px;
+    top: 60px;
     z-index: 5;
 }
 
-.image-rwd {
+/* .image-rwd {
     height: 285px;
-}
+} */
 
 .hideobj {
     display:none;
@@ -65,4 +120,4 @@
 
 }
 
-@media (max-width: 575.98px) {.image-rwd {height: 625px;}}
+/* @media (max-width: 575.98px) {.image-rwd {height: 625px;}} */
